[PLAT-9857] Install otel collector during universe creation, configure audit logging and basic log export config upload.
Summary:
This diff establishes base logic for opentelemetry collector deployment on the DB nodes.
Also it applies audit logging config via gflags + log export config via otel collector config file.

Test Plan:
Create universe. Otel collector is not installed by default.
Enable yb.universe.otel_collector_enabled key.
Create centos7 universe. Otel collector is installed and configured as system scoped systemd service, but is turned off.
Create alma8 universe. Otel collector is installed and configured as user scoped systemd service, but is turned off.
Configure DataDog telemetry provider via API. Create universe via API with audit logging enabled + log export enabled. Otel collector is installed and running. Logs are sent to DataDog.

Reviewers: svarshney, muthu, #yba-api-review!

Reviewed By: svarshney, muthu

Subscribers: yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D28902